# android_hardware_amlogic_hwcomposer_mesondisplay

./: Android.bp
common/: Android.bp
common/base/: DrmFrameBufferBase.cpp  DrmTypes.cpp
common/base/include/: BasicTypes.h  DrmFrameBufferBase.h  DrmTypes.h
common/display/include/: HwDisplayCrtcBase.h  HwDisplayPlaneBase.h
common/utils/: DebugHelper.cpp
common/utils/include/: DebugHelper.h  MesonLog.h  Mutex.h
composition/: Android.bp
composition/include/: Composition.h  IComposer.h  ICompositionStrategyBase.h
libs/hdcpAuth/: Android.bp  HDCPTxAuth.cpp
libs/hdcpAuth/include/: HDCPTxAuth.h
libs/libuvm/: Android.bp  UvmDetach.cpp  UvmDev.cpp
libs/libuvm/include/: UvmDetach.h  UvmDev.h
libs/modepolicy/: Android.bp  CMakeLists.txt  mode_policy.c  mode_private.h  mode_ubootenv.c  mode_util.c
libs/modepolicy/include/: mode_policy.h  mode_ubootenv.h  mode_util.h
libs/modepolicy/tests/unittests/: 1080P60HZ_SDR.json  4K30HZ_DV.json  4K30HZ_SDR.json  4K60HZ_DV.json  4K60HZ_HDR.json  4K60HZ_SDR.json  720P60HZ_SDR.json  Android.bp  ModePolicyTest.cpp  VtsModePolicy.cpp  VtsModePolicy.h  ubootEnvTest.cpp
